docs: atualiza README.md com novos scripts e melhorias na transcrição
- Adiciona seções detalhadas para novos scripts: `whisper_avancado.py`, `whisper_melhorado.py`, `whisper_rapido.py`, `corrigir_transcricao.py`, e `organizar_transcricao.py`.
- Descreve funcionalidades avançadas como diarização, segmentação por tópicos, e modos de limpeza e correção.
- Atualiza `requirements.txt` com dependências opcionais para diarização e pós-correção com LLM.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 openai-whisper>=20231117
 torch>=2.0.0
 torchaudio>=2.0.0
+# Opcional: para diarização avançada (descomente se necessário)
+# pyannote.audio>=3.0.0
+# pyannote.core>=5.0.0
+# Opcional: para pós-correção com LLM
+# openai>=1.0.0
 
